# validator-template

./: .gitignore  CONTRIBUTING.md  INSTALLATION.md  Makefile  README.md  __init__.py  install.sh  pyproject.toml  regex-match.py  requirements.txt
.github/workflows/: pr_qc.yml
test/: test-validator.py
test_validator/: post-install.sh
tests/: test_validator.py
validator/: __init__.py  main.py  post-install.py
